--- a/src/App.css
+++ b/src/App.css
@@ -1,45 +1,66 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+@font-face {
+  font-family: 'Clash Display';
+  src: url('./assets/fonts/ClashDisplay_Complete/Fonts/WEB/fonts/ClashDisplay-Bold.woff') format('woff');
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+.ul li a {
+  position: relative;
+  padding-bottom: 4px;
 }
 
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+h1,
+.typed {
+  font-family: 'Clash Display', sans-serif;
 }
 
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.ul li a::before {
+  position: absolute;
+  content: "";
+  left: 0;
+  bottom: 0;
+  height: 3px;
+  width: 100%;
+  background: #00df9a;
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: transform .3s linear;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+.ul li a:hover::before {
+  transform: scaleX(1);
+  transform-origin: left;
+}
+
+.resume {
+  position: relative;
+}
+
+.resume::after {
+  position: absolute;
+  content: "";
+  left: 230px;
+  bottom: 0;
+  height: 4px;
+  width: 30%;
+  background: #00df9a;
+}
+
+/* .home {
+  background-color: #00df9a;
+  position: absolute;
+  transform: rotate(-15deg);
+  height: 200%;
+  left: -83%;
+  top: -20%;
+  width: 100%;
+}*/
+
+@media (max-width:768px) {
+  .home {
+    display: none;
   }
 
-  to {
-    transform: rotate(360deg);
+  .resume::after {
+    left: 170px;
   }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
