--- a/src/App.css
+++ b/src/App.css
@@ -89,7 +89,17 @@ h1,
   left: -83%;
   top: -20%;
   width: 100%;
-}*/
+} */
+/* .home {
+  background-color: #00df9a;
+  position: absolute;
+  transform: rotate(-15deg);
+  height: 100%;
+  right: -23%;
+  top: 90%;
+  width: 50%;
+  clip-path: polygon(50% at right);
+} */
 
 @media (max-width:768px) {
   .home {
