--- a/src/index.css
+++ b/src/index.css
@@ -2,16 +2,34 @@
 @tailwind components;
 @tailwind utilities;
 
-html{
-    scroll-behavior: smooth;
+html {
+  scroll-behavior: smooth;
 }
 
 body {
-    background-color: #000300;
+  background-color: #000300;
 }
 
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+.visible {
+  animation: spin 0.3s ease-in-out;
+  /* transition: opacity 0.3s ease-in-out, transform 0.5s ease-in-out; */
+}
+
+@keyframes spin {
+  from {
+    opacity: 1;
+    transform: translateY(100%);
+    transition: opacity 0.3s ease-in-out, transform 0.5s ease-in-out;
+  }
+  to {
+    opacity: 0;
+    transform: translateY(0%);
+    transition: opacity 0.3s ease-in-out, transform 0.5s ease-in-out;
+  }
 }
